# davify

./: .gitignore  README.md  pyproject.toml  setup.py
src/davify/: __init__.py  clean_directory.py  cli.py  config.py  dav.py  housekeeping.py  keyring.py  transform.py  upload.py
